# hsg

./: .coverage  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  ccedict.py  ccedictsearch.py  flake.nix  frequency.py  heisigplecodict.py  heisigtatoeba.py  heisigtools.py  mkdocs.yml  pleco-dict-format-appunti.txt  pyproject.toml  release-please-config.json  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  corpus_request.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml  update-brew.yml
.opencode/plans/: phase0-hygiene.md  phase1-quality.md  phase2-decouple.md  v1.0-publishable-release.md
assets/: hanzi_by_frequency.json  heisig-extension.tsv  heisig.tsv  hsk_old.csv  rsh-pleco-pinyin.txt  tatoeba.sqlite
assets/renminwang/: README.txt  RENMINWANG-CHR  RENMINWANG-TITLE-CHR  RENMINWANG-TITLE-WF  RENMINWANG-WF
assets/subtlex-ch/: SUBTLEX-CH-CHR.csv  SUBTLEX-CH-WF.csv
classes/: ccedict.py  frequency.py  heisig.py  hsk.py  renminwang.py  subtlexch.py
contrib/aur/: PKGBUILD
contrib/homebrew/: hsg.rb
docs/: changelog.md  data-sources.md  index.md  usage.md
docs/api/: classes.md  commands.md  utils.md
hsg/: __main__.py  cli.py  logging_setup.py
hsg/classes/: ccedict.py  file_knownset.py  frequency.py  frequency_factory.py  heisig.py  hsk.py  hsk_knownset.py  knownset.py  knownset_factory.py  renminwang.py  sentencecorpus.py  stories.py  subtlexch.py  tatoeba_corpus.py
hsg/commands/: ccedictsearch.py  frequencytools.py  heisigtatoeba.py  heisigtools.py
hsg/utils/: constants.py  io.py  writers.py
scripts/: heisigplecodict.py  tatoebasqlite.py
tests/: conftest.py
tests/commands/: test_enrich.py  test_freq.py  test_list.py  test_lookup.py  test_parse.py  test_random.py  test_sentences.py  test_stories.py
tests/snapshots/: test_output_formats.py
tests/unit/: test_ccedict.py  test_file_knownset.py  test_frequency_factory.py  test_heisig.py  test_hsk.py  test_hsk_knownset.py  test_io.py  test_knownset.py  test_knownset_factory.py  test_renminwang.py  test_sentencecorpus.py  test_stories_store.py  test_subtlexch.py  test_tatoeba_corpus.py  test_writers.py
utils/: constants.py  statistics.py  writers.py
