[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsg"
version = "0.1.0"
description = "Analyse Chinese text against your known-character set and mine comprehensible example sentences."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Davide" }]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "tabulate>=0.9",
    "pypinyin>=0.44",
    "requests>=2.28",
]

[project.optional-dependencies]
clipboard = ["clipboard>=0.0.4"]
dev = [
    "mypy>=1.0",
    "types-tabulate",
    "types-requests",
]

[project.scripts]
hsg = "hsg.commands.heisigtools:cli"
hsg-tatoeba = "hsg.commands.heisigtatoeba:cli"
hsg-cc = "hsg.commands.ccedictsearch:search"
hsg-freq = "hsg.commands.frequencytools:search"

[tool.hatch.build.targets.wheel]
packages = ["hsg"]
