[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hsg"
version = "0.1.0"
description = "Analyse Chinese text against your known-character set and mine comprehensible example sentences."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Davide" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "tabulate>=0.9",
    "pypinyin>=0.44",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/davide/hsg"
Repository = "https://github.com/davide/hsg"
Documentation = "https://davide.github.io/hsg/"
Issues = "https://github.com/davide/hsg/issues"
Changelog = "https://github.com/davide/hsg/blob/main/CHANGELOG.md"

[project.optional-dependencies]
clipboard = ["clipboard>=0.0.4"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
dev = [
    "mypy>=1.0",
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "types-tabulate",
    "types-requests",
]

[project.scripts]
hsg = "hsg.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["hsg"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["scripts", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "clipboard"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error::SyntaxWarning",
]

[tool.coverage.run]
source = ["hsg"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["if __name__ == .__main__.:", "if TYPE_CHECKING:"]
